# ezsh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmdContext.cpp  cmdCopy.cpp  cmdForeach.cpp  cmdIfElse.cpp  cmdList.cpp  cmdMD5Sum.cpp  cmdMakeDir.cpp  cmdMove.cpp  cmdRemove.cpp  cmdSQLite.cpp  cmdSQLiteImport.cpp  cmdScript.cpp  cmdStart.cpp  cmdText.cpp  cmdTextpp.cpp  cmdUnicode.cpp  cmdWebp.cpp  context.cpp  context.hpp  encode.hpp  error.cpp  error.hpp  ezsh.cpp  fileset.cpp  fileset.hpp  filesystem.hpp  glob.cpp  glob.hpp  option.cpp  option.hpp  optionFileSet.cpp  optionFileSet.hpp  optionOutPut.cpp  optionOutPut.hpp  optionPredication.cpp  optionPredication.hpp  (+6 more)
libs/bzip2/: CMakeLists.txt  bzip2.c  bzip2recover.c  bzlib.c  bzlib.h  bzlib_private.h  compress.c  decompress.c  huffman.c  spewG.c
libs/captcha/: CMakeLists.txt  captFontFile.cpp  captFontFile.h  captGen.cpp  captGenerator.cpp  captGenerator.h  captRLE.cpp  captRLE.h
libs/enums/: enumConfig.hpp  enumCustom.hpp  enumMagic.hpp  enumTest.cpp  enumTest.hpp  enumTest1.cpp
libs/jpeg/: CMakeLists.txt  jchuff.c
libs/json/: CMakeLists.txt  JSONOptions.h  libjson.h
libs/json/_internal/Dependencies/libbase64++/: libbase64++.h
libs/json/_internal/Dependencies/mempool++/: mempool.h
libs/json/_internal/Source/: JSONAllocator.cpp  JSONAllocator.h  JSONChildren.cpp  JSONChildren.h  JSONDebug.cpp  JSONDebug.h  JSONDefs.h  JSONGlobals.h  JSONIterators.cpp  JSONMemory.cpp  JSONMemory.h  JSONMemoryPool.h  JSONNode.cpp  JSONNode.h  JSONNode_Mutex.cpp  JSONPreparse.cpp  JSONPreparse.h  JSONSharedString.h  JSONSingleton.h  JSONStats.h  JSONStream.cpp  JSONStream.h  JSONValidator.cpp  JSONValidator.h  JSONWorker.cpp  JSONWorker.h  JSONWriter.cpp  JSON_Base64.h  NumberToString.h  internalJSONNode.cpp  internalJSONNode.h  libjson.cpp
libs/json/_internal/Source/JSONDefs/: GNU_C.h  Strings_Defs.h  Unknown_C.h  Visual_C.h
libs/json/_internal/TestSuite/: RunTestSuite2.cpp  RunTestSuite2.h  StringTest.h  TestAssign.cpp  TestBinary.cpp  TestChildren.cpp  TestComments.cpp  TestConverters.cpp  TestCtors.cpp  TestEquality.cpp  TestFunctions.cpp  TestInequality.cpp  TestInspectors.cpp  TestIterators.cpp  TestMutex.cpp  TestNamespace.cpp  TestRefCounting.cpp  TestSharedString.cpp  TestStreams.cpp  TestString.cpp  TestSuite.cpp  TestSuite.h  TestValidator.cpp  TestWriter.cpp  UStringTest.h  UnitTest.cpp  UnitTest.h  main.cpp
libs/json/_internal/TestSuite/All/: main.cpp
libs/json/_internal/TestSuite/Benchmark/: main.cpp
libs/json/_internal/TestSuite2/: BaseTest.h
libs/json/_internal/TestSuite2/JSONDebug/: JSON_ASSERT.cpp  JSON_ASSERT.h  JSON_ASSERT_SAFE.cpp  JSON_ASSERT_SAFE.h  JSON_FAIL.cpp  JSON_FAIL.h  JSON_FAIL_SAFE.cpp  JSON_FAIL_SAFE.h
libs/json/_internal/TestSuite2/JSONGlobals/: jsonSingleton.cpp  jsonSingleton.h
libs/json/_internal/TestSuite2/JSONValidator/: isValidMember.cpp  isValidMember.h  isValidNumber.cpp  isValidNumber.h  isValidRoot.cpp  isValidRoot.h  isValidString.cpp  isValidString.h  securityTest.cpp  securityTest.h
libs/json/_internal/TestSuite2/JSONValidator/Resources/: validyMacros.h
libs/json/_internal/TestSuite2/JSON_Base64/: json_decode64.cpp  json_decode64.h  json_encode64.cpp  json_encode64.h
libs/json/_internal/TestSuite2/NumberToString/: _areFloatsEqual.cpp  _areFloatsEqual.h  _atof.cpp  _atof.h  _ftoa.cpp  _ftoa.h  _itoa.cpp  _itoa.h  _uitoa.cpp  _uitoa.h  getLenSize.cpp  getLenSize.h  isNumeric.cpp  isNumeric.h
libs/leveldb/: CMakeLists.txt
libs/leveldb/db/: memtable.cc  version_set.cc
libs/leveldb/include/leveldb/: status.h
libs/lua/: CMakeLists.txt  version
libs/lua/src/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lgc.c  lgc.h  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  lstrlib.c  ltable.c  ltm.h  lua.c  lua.h  luac.c  luaconf.h  (+4 more)
libs/lz4/: CMakeLists.txt
libs/png/: CMakeLists.txt  CMakeLists.txt.bak
libs/ppsh/: CMakeLists.txt  ppsh.hpp  proc.cpp  proc.hpp
libs/snappy/: CMakeLists.txt  version
libs/snappy/testdata/: fields.c
libs/sqlite/: CMakeLists.txt  Column.cpp  shell.c
libs/sqlite/SQLiteCpp/: Column.h
libs/tcmalloc/: README_windows.txt  libtool
libs/tinyAES128/: CMakeLists.txt  aes.c  aes.h  test.c
libs/utf8/utf8/: core.h
libs/webp/: CMakeLists.txt
libs/webp/examples/: cwebp.c  dwebp.c  example_util.c  webpmux.c
libs/zlib/: CMakeLists.txt
libs/zlib/contrib/inflate86/: inffas86.c
